# mariadb-columnstore-engine

./: .clang-format  .clang-tidy  .drone.js  .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  1  2866.patch  BUILD.md  CMakeLists.txt  CODING STANDARDS.md  CONTRIBUTING.md  ChangeLog  DEVELOPING.md  Dockerfile.patch  FindNetSNMP.cmake  INSTALL  Makefile.am  Makefile.in  Makefile.save  Makefile.tar  MyDebugFlags  NEWS  README  README.md  VERSION  VERSION.in  Vagrantfile  aclocal.m4  addgit  buildFlags  cmake-format.py  columnstore.h.in  columnstore_version.cmake  columnstoreversion.h  columnstoreversion.h.in  config.h  config.h.cmake  config.h.in  (+37 more)
cmapi/: .gitignore  CMakeLists.txt  README.md  VERSION  VERSION.template  check_ready.sh  cleanup.sh  conffiles.template  mcs.template  mcs_aws.template  mcs_gsutil.template  postinst.template  prerm.template  requirements.txt  run_tests.py  service.sh  service.template  systemd.env.template
cmapi/cmake/: cmapi_misc.cmake
cmapi/cmapi_server/: SingleNode.xml  __main__.py  cmapi_logger.conf  cmapi_server.conf  constants.py  exceptions.py  failover_agent.py  helpers.py  logging_management.py  node_manipulation.py
cmapi/engine_files/: mariadb-columnstore-start.sh  mariadb-columnstore-stop.sh  mcs-loadbrm.py  mcs-savebrm.py  mcs-workernode.service
cmapi/failover/: agent_comm.py  config.py  heartbeat_history.py  heartbeater.py  node_monitor.py
cmapi/mcs_cluster_tool/: __main__.py  backup_commands.py  cluster_app.py  cmapi_app.py  constants.py  decorators.py  helpers.py  mcs_cli_log.conf  restore_commands.py
cmapi/scripts/: cs_package_manager.sh  mcs_backup_manager.sh
datatypes/: CMakeLists.txt  csdecimal.cpp  csdecimal.h  decimal.cpp  decimal.h  mcs_charset.h  mcs_data_condition.h  mcs_datatype.cpp  mcs_datatype.h  mcs_datatype_basic.h  mcs_datatypes_limits.h  mcs_decimal.cpp  mcs_decimal.h  mcs_double.h  mcs_float128.h  mcs_int128.cpp  mcs_int128.h  mcs_int64.h  mcs_longdouble.h  mcs_numeric_limits.h  mcs_outofrange.h  mcs_string.h  mcs_systemcatalog.cpp  mcs_systemcatalog.h  numericliteral.h
dbcon/ddlpackage/: CMakeLists.txt  Makefile.am  Makefile.in  altertable.cpp  columndef.cpp  createindex.cpp  createtable.cpp  ddl-gram-win.cpp  ddl-gram-win.h  ddl-gram.cpp  ddl-gram.h  ddl-gram.sh  ddl-scan-win.cpp  ddl-scan.cpp  ddl-scan.sh  ddl.l  ddl.y  ddlpackage.vpj  ddlpkg.cpp  ddlpkg.h  debugstatement.cpp  dropindex.cpp  droppartition.cpp  droptable.cpp  gramtest.cpp  markpartition.cpp  old-tdriver.cpp  restorepartition.cpp  scanner.bat  serialize.cpp  sqlparser.cpp  sqlparser.h  sqlstatement.cpp  sqlstatementlist.cpp  tabledef.cpp  tdriver.cpp
dbcon/ddlpackageproc/: CMakeLists.txt  Makefile.in  altertableprocessor.cpp  altertableprocessor.h  createindexprocessor.cpp  createindexprocessor.h  createtableprocessor.cpp  createtableprocessor.h  ddlindexpopulator.cpp  ddlindexpopulator.h  ddlpackageproc.vpj  ddlpackageprocessor.cpp  ddlpackageprocessor.h  ddlpackageprocessorfactory.cpp  ddlpackageprocessorfactory.h  dropindexprocessor.cpp  dropindexprocessor.h  droppartitionprocessor.cpp  droppartitionprocessor.h  droptableprocessor.cpp  droptableprocessor.h  libddlpackageproc.rc  markpartitionprocessor.cpp  markpartitionprocessor.h  mydriver.cpp  resource.h  restorepartitionprocessor.cpp  restorepartitionprocessor.h  tdriver.cpp
dbcon/dmlpackage/: CMakeLists.txt  Makefile.am  Makefile.in  calpontdmlfactory.cpp  calpontdmlfactory.h  calpontdmlpackage.cpp  calpontdmlpackage.h  commanddmlpackage.cpp  commanddmlpackage.h  deletedmlpackage.cpp  deletedmlpackage.h  dml-gram-win.cpp  dml-gram-win.h  dml-gram.cpp  dml-gram.h  dml-gram.sh  dml-scan-win.cpp  dml-scan.cpp  dml-scan.sh  dml.l  dml.y  dmlcolumn.cpp  dmlpkg.h  (+29 more)
ddlproc/: CMakeLists.txt  DDLProc.rc  Makefile  Makefile.in  ddlproc.cpp  ddlproc.h  ddlproc.vpj  ddlprocessor.cpp  ddlprocessor.h  resource.h  tdriver.cpp
decomsvr/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cli.cpp  quicklz.h  resource.h  server.cpp
dmlproc/: CMakeLists.txt  DMLProc.rc  Makefile  Makefile.am  Makefile.in  batchinsertprocessor.cpp  batchinsertprocessor.h  dmlproc.cpp  dmlproc.h  dmlproc.vpj  dmlprocessor.cpp  dmlprocessor.h  dmlresultbuffer.cpp  dmlresultbuffer.h  resource.h
exemgr/: CMakeLists.txt  ExeMgr.rc  Makefile  Makefile.in  activestatementcounter.cpp  activestatementcounter.h  exemgr.cpp  exemgr.vpj  femsghandler.cpp  femsghandler.h  main.cpp  resource.h  serviceexemgr.cpp  serviceexemgr.h
jit/: CMakeLists.txt  JIT.cpp  JIT.h  compilefunction.cpp  compilefunction.h  compileoperator.cpp  compileoperator.h  expressionjit.cpp  expressionjit.h  jit.cpp  jit.h
procmgr/: CMakeLists.txt  Makefile  Makefile.in  main.cpp  processmanager.cpp  processmanager.h  procmgr.vpj
procmon/: CMakeLists.txt  Makefile  Makefile.in  main.cpp  processmonitor.cpp  processmonitor.h  procmon.vpj  root@192.168.1.126
storage-manager/: CMakeLists.txt  README  VERSION  gitVersionSM.in  storagemanager.cnf  storagemanager.cnf.in
test/: CMakeLists.txt  gtest.CMakeLists.txt.in
tests/: CMakeLists.txt  aggregation_benchmark.cpp  arithmeticoperator-tests.cpp  asantest.cpp  block-cache-standalone.cpp  block_cache_test.cpp  brm-em-standalone.cpp  bytestream.cpp  col16block.h  col1block.h  col2block.h  col4block.h  col8block.h  col_double_block.h  col_float_block.h  col_neg_double.h  col_neg_float.h  comparators-tests.cpp  compression-tests.cpp  csdecimal.cpp  dataconvert-tests.cpp  fair_threadpool.cpp  filebuffermgr.cpp  funcexp_bench.cpp  heaporderby-tests.cpp  mcs_decimal-tests.cpp  mcs_int64_tests.cpp  modified_pdqsort.cpp  parquetconvert-tests.cpp  patterns_test.cpp  pdqorderby-tests.cpp  pqorderby-test.cpp  primitives_column_scan_and_filter.cpp  primitives_scan_bench.cpp  query19_fixed.h  query19_init.h  rebuild-em-tests.cpp  rewritetest.cpp  rewritetest2.cpp  rowgroup-tests.cpp  (+28 more)
tools/: CMakeLists.txt  Makefile.in  check_metafile_consistency.py  journal_printer.py
unit_test/: CMakeLists.txt  gtest.CMakeLists.txt.in
utils/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.save  utils.vpj
(+13393 files in other folders)
